--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,7 @@
     {% block content %}
     <!-- Page content -->
     {% endblock %}
+    <img id="bella-logo" src="{% static 'app/images/bellahouston-logo.png' %}" alt="Bellahouston Academy Logo">
   </main>
 
   <!-- Scripts -->
