--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,9 @@
     <img id="bella-logo" src="{% static 'app/images/bellahouston-logo.png' %}" alt="Bellahouston Academy Logo">
   </main>
 
+  <!-- Footer -->
+   <footer>&copy; {% now "Y" %} Mr Wang - All rights reserved</footer>
+
   <!-- Scripts -->
   <script src="{% static 'app/js/scripts.js' %}"></script>
 </body>
