Add about page, prep for render deployment

--- a/app/templates/app/quiz_gen.html
+++ b/app/templates/app/quiz_gen.html
@@ -51,5 +51,7 @@
     <button type="submit">Generate</button>
   </form>
 
+  <p>Click <a href="https://forms.office.com/" target="_blank">here</a> to open Microsoft Forms (opens in a new tab).</p>
+
 </div>
 {% endblock %}
