--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,8 @@
   <header>
     <nav>
       <a href="{% url 'index' %}">Home</a> |
-      <a href="{% url 'quiz_gen' %}">Quiz Generator</a> |
+      <a href="{% url 'about' %}">About</a> |
+      <a href="{% url 'quiz_gen' %}">Quiz Generator</a>
     </nav>
   </header>
 
