--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock %} | Mr Wang</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'app/images/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'app/css/styles.css' %}">
   {% block css %}{% endblock %}
 </head>
