--- a/app/static/app/css/styles.css
+++ b/app/static/app/css/styles.css
@@ -66,3 +66,25 @@ footer {
   font-style: italic;
   padding: 2rem;
 }
+
+/* Headings */
+h1, h2, h3 {
+  font-family: "Major Mono Display", monospace;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  margin: 1rem auto 2rem auto;
+  background: linear-gradient(white, white) padding-box, linear-gradient(to right, rgba(131, 32, 189, 1), rgba(255, 236, 64, 1)) border-box;
+  border-radius: 10px;
+  padding: 10px;
+}
+h1 {
+  font-size: 40px;
+  border: 3px solid transparent;
+  max-width: 500px;
+}
+h2, h3 {
+  margin-top: 30px;
+  border-bottom: 2px solid transparent;
+  max-width: 400px;
+}
