--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="content">
-    <h1>Home</h1>
+    <h1>MrWang.co.uk</h1>
     <p>Welcome to Mr Wang's website!</p>
     <p>(Work in progress, obviously)</p>
 </div>
