--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -7,5 +7,6 @@
     <h1>MrWang.co.uk</h1>
     <p>Welcome to Mr Wang's website!</p>
     <p>(Work in progress, obviously)</p>
+    <p><a href="{% url 'quiz_gen' %}">Click here</a> to use the quiz generator.</p>
 </div>
 {% endblock %}
