add error page templates and settings

--- a/app/templates/app/quiz_gen.html
+++ b/app/templates/app/quiz_gen.html
@@ -4,7 +4,7 @@
 {% block title %}AI Quiz Generator{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'app/css/quiz_gen_styles.css' %}">
+<link rel="stylesheet" href="{% static 'app/css/quiz_gen.css' %}">
 {% endblock %}
 
 {% block content %}
