--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock %} | Mr Wang</title>
   <link rel="icon" type="image/x-icon" href="{% static 'app/images/favicon.ico' %}">
-  <link rel="stylesheet" href="{% static 'app/css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'app/css/global.css' %}">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
