--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -4,7 +4,7 @@
 {% block title %}About{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'app/css/about_styles.css' %}">
+<link rel="stylesheet" href="{% static 'app/css/about.css' %}">
 <!-- Prism.js CSS for code snippet formatting -->
 <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
 {% endblock %}
