--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -7,7 +7,16 @@
 {% block content %}
 <div class="content">
     <h1>Pupil Resources</h1>
-    <p>Welcome to Mr Wang's website!</p>
+    
+    <div class="content-grid">
+        <a href="">
+            Coming soon...
+        </a>
+        <a href="">
+            Coming soon...
+        </a>
+    </div>
+    <br>
 
 </div>
 {% endblock %}
