--- a/app/templates/app/teacher/teacher.html
+++ b/app/templates/app/teacher/teacher.html
@@ -7,8 +7,16 @@
 {% block content %}
 <div class="content">
     <h1>Teacher Resources</h1>
-    <p>Welcome to Mr Wang's website!</p>
-    <p><a href="{% url 'quiz_gen' %}">Click here</a> for AI quiz generator.</p>
+    
+    <div class="content-grid">
+        <a href="{% url 'quiz_gen' %}">
+            AI Quiz Generator
+        </a>
+        <a href="">
+            Coming soon...
+        </a>
+    </div>
+    <br>
 
 </div>
 {% endblock %}
