add n5 notes for pupil file testing

--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -9,8 +9,8 @@
     <h1>Pupil Resources</h1>
     
     <div class="content-grid">
-        <a href="">
-            Coming soon...
+        <a href="{% url 'pupil_resources' %}">
+            National 5 Computing Notes
         </a>
         <a href="">
             Coming soon...
