add file size in MB or KB

--- a/app/templates/app/pupil/resources.html
+++ b/app/templates/app/pupil/resources.html
@@ -15,7 +15,7 @@
           <li>
             <a href="{% static file.path %}" download>
               {{ file.name }}
-            </a> ({{ file.size }} KB)
+            </a> ({{ file.size }})
           </li>
         {% endfor %}
       </ul>
