sort files and folders alphabetically

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -19,7 +19,7 @@
         <h2>Site Details</h2>
     </div>
     <p>This site is a <a href="https://www.djangoproject.com/" target="_blank">Django</a> web app, hosted on <a href="https://render.com/" target="_blank">Render</a>.</p>
-    <p><a href="https://github.com/timo-w/mrwang">Click here</a> to open the GitHub page for this project.</p>
+    <p><a href="https://github.com/timo-w/mrwang" target="_blank">Click here</a> to open the GitHub page for this project.</p>
 
     <br><hr><br>
 
