--- a/quiz_gen/templates/quiz_gen/quiz_gen.html
+++ b/quiz_gen/templates/quiz_gen/quiz_gen.html
@@ -4,7 +4,7 @@
 {% block title %}AI Quiz Generator{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'app/css/quiz_gen.css' %}">
+<link rel="stylesheet" href="{% static 'quiz_gen/css/quiz_gen.css' %}">
 {% endblock %}
 
 {% block content %}
