add rocket costume pic to about page

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -12,7 +12,9 @@
 {% block content %}
 <div class="content">
     <h1>About the Site</h1>
-    <p>Hello! My name is Mr Wang and I&apos;m a Computing Science teacher at <a href="https://blogs.glowscotland.org.uk/gc/bellahoustonacademy2019/" target="_blank">Bellahouston Academy</a>. This site is a side project of mine to host various educational tools and resources.</p>
+    <p>Hello! My name is Mr Wang and I&apos;m a Computing Science teacher at <a href="https://blogs.glowscotland.org.uk/gc/bellahoustonacademy2019/" target="_blank">Bellahouston Academy</a>. </p>
+    <img id="rocket-costume" src="{% static 'app/images/rocket-costume.jpg' %}" alt="Mr Wang in a rocket costume.">
+    <p>This site is a side project of mine to host various educational tools and resources, alongside any personal projects.</p>
     <p>Please email me any suggestions or feedback at <i>timothy.wang.me.uk(at)gmail.com</i>.
     <p>Thanks for visiting!</p>
     <div>
