--- a/app/templates/app/teacher/teacher.html
+++ b/app/templates/app/teacher/teacher.html
@@ -9,10 +9,10 @@
     <h1>Teacher Resources</h1>
     
     <div class="content-grid">
-        <a href="{% url 'quiz_gen' %}">
+        <a class="grid-button" href="{% url 'quiz_gen' %}">
             AI Quiz Generator
         </a>
-        <a href="">
+        <a class="grid-button" href="">
             Coming soon...
         </a>
     </div>
