--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -9,10 +9,10 @@
     <h1>Pupil Resources</h1>
     
     <div class="content-grid">
-        <a href="{% url 'pupil_resources' %}">
+        <a class="grid-button" href="{% url 'pupil_resources' %}">
             National 5 Computing Notes
         </a>
-        <a href="">
+        <a class="grid-button" href="">
             Coming soon...
         </a>
     </div>
