--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,8 +10,9 @@
 {% block content %}
 <div class="content">
     <h1>MrWang.co.uk</h1>
-    <p>Welcome to Mr Wang's website!</p>
+    <hr>
 
+    <h4>Educational Resources</h4>
     <div class="content-grid">
         <a class="grid-button" href="{% url 'teacher' %}">
             Teacher Resources
@@ -20,7 +21,9 @@
             Pupil Resources
         </a>
     </div>
-    <br><hr><br>
+    <br><hr>
+
+    <h4>Other Stuff</h4>
     <div class="content-grid">
         <a class="grid-button" href="{% url 'about' %}">
             About this Website
