add projects page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -28,7 +28,7 @@
         <a class="grid-button" href="{% url 'about' %}">
             About this Website
         </a>
-        <a class="grid-button" href="">
+        <a class="grid-button" href="{% url 'projects' %}">
             Other projects
         </a>
     </div>
